# osso-systemui-alarm

./: AUTHORS  COPYING  Makefile  antigen.sh  autogen.sh  configure.ac  osso-systemui-alarm.c  osso-systemui-alarm.h  systemui.h
debian/: changelog  control  copyright  osso-systemui-alarm.install  rules
src/: Makefile.am  systemui.h
